correction d'affichage en version mobile

--- a/modal.css
+++ b/modal.css
@@ -113,6 +113,11 @@ main {
   border-radius: 2rem;
   text-align: justify;
 }
+@media screen and (max-width: 540px) {
+  main{
+  margin: 1px 0px 0px;
+  }
+} 
 
 .modal-btn {
   font-size: 145%;
@@ -414,7 +419,6 @@ input[data-error]::after {
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
 }
@@ -493,7 +497,8 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0px;
+    width:300px;
   }
   .hero-content::after {
     content: unset;
@@ -524,13 +529,7 @@ footer {
     text-align: center;
   }
 }
-@media screen and (max-width: 540px) {
-  .hero-headline {
-    font-size: 3rem;
-    white-space: normal;
-    font-weight: bold;
-  }
-}
+
 
 @keyframes modalopen {
   from {
